k8s/github/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-github-com
  namespace: backend
spec:
  selector:
    app: xablog
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
