k8s/github/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-git
  namespace: backend
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - git.xenoamess.com
      secretName: my-tls-secret
  rules:
    - host: git.xenoamess.com
      http:
        paths:
          - path: /(www\\.)?github.com(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: proxy-github-com
                port:
                  number: 443
